--- a/build.gradle
+++ b/build.gradle
@@ -3,29 +3,24 @@ buildscript {
 		springBootVersion = '1.3.2.RELEASE'
 	}
 	repositories {
-		mavenCentral()
+		maven {
+			 url "https://plugins.gradle.org/m2/"
+    		}
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath "io.spring.gradle:dependency-management-plugin:0.6.1.RELEASE" 
 	}
 }
 
-//apply plugin: 'java'
+apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot' 
-apply plugin: 'war'
 
-war {
-    baseName = 'myapp'
-    version =  '0.5.0'
-}
-
-/*
 jar {
 	baseName = 'demo'
 	version = '0.0.1-SNAPSHOT'
 }
-*/
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
