--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,13 @@ spring.datasource.username=root
 spring.datasource.password=0708
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-server.port=8060
+server.port=8080
 spring.jta.enabled=true
 
 #Thymeleaf
 spring.thymeleaf.cache=false
+#spring.thymeleaf.prefix: classpath:/templates
+
 
 #Security
 security.basic.enabled=false
