--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/amicomjpa?useUnicode=true&charaterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://54.213.137.25:3306/amicomjpa?useUnicode=true&charaterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=0708
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
