--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,8 @@ multipart.max-request-size= 100MB
 
 #mail
 spring.mail.host = smtp.gmail.com
-spring.mail.username = ultimacy@ajou.ac.kr
-spring.mail.password = drama0708!@
+spring.mail.username = amicomDeveloper@gmail.com
+spring.mail.password = amicom2885
 spring.mail.port=465
 
 spring.mail.properties.mail.smtp.auth = true
